style(carousel): responsive fixes and disable autoplay on mobile/tablet

--- a/src/components/MediaQueries.scss
+++ b/src/components/MediaQueries.scss
@@ -40,3 +40,9 @@
         @content
     }
 };
+
+@mixin maxHeight720 {
+    @media (max-height: 720px) {
+        @content;
+    }
+}
